-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 9, 11, 17, 21
-
Component/s: hotspot
-
b25
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8311481 | 17.0.9 | Aleksey Shipilev | P4 | Resolved | Fixed | b01 |
-XX:+CheckMemoryInitialization seems to be broken. When running a Java program the VM crashes with:
# Internal Error (/oracle/hs/hotspot/src/share/vm/gc/shared/collectedHeap.cpp:257), pid=10632, tid=10633
# assert((*(intptr_t*) (addr + slot)) == ((intptr_t) badHeapWordVal)) failed: Found non badHeapWordValue in pre-allocation check
Stack: [0x00007fafb7439000,0x00007fafb753a000], sp=0x00007fafb7537a10, free space=1018k
Native frames: (J=compiled Java code, A=aot compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [libjvm.so+0x137be61] VMError::report_and_die(int, char const*, char const*, __va_list_tag*, Thread*, unsigned char*, void*, void*, char const*, int, unsigned long)+0x49f
V [libjvm.so+0x137b912] VMError::report_and_die(Thread*, char const*, int, char const*, char const*, __va_list_tag*)+0x7e
V [libjvm.so+0x9c2dd6] report_vm_error(char const*, int, char const*, char const*, ...)+0x105
V [libjvm.so+0x8f1dc1] CollectedHeap::check_for_non_bad_heap_word_value(HeapWord*, unsigned long)+0xab
V [libjvm.so+0x606cf6] CollectedHeap::common_mem_allocate_noinit(KlassHandle, unsigned long, Thread*)+0x160
V [libjvm.so+0x606eac] CollectedHeap::common_mem_allocate_init(KlassHandle, unsigned long, Thread*)+0x4e
V [libjvm.so+0x6071f2] CollectedHeap::array_allocate(KlassHandle, int, int, Thread*)+0xf4
V [libjvm.so+0x132ff8c] TypeArrayKlass::allocate_common(int, bool, Thread*)+0x114
V [libjvm.so+0x5dcf8e] TypeArrayKlass::allocate(int, Thread*)+0x3e
V [libjvm.so+0x10edd93] oopFactory::new_typeArray(BasicType, int, Thread*)+0x55
V [libjvm.so+0xc9b520] InterpreterRuntime::newarray(JavaThread*, BasicType, int)+0x126
# Internal Error (/oracle/hs/hotspot/src/share/vm/gc/shared/collectedHeap.cpp:257), pid=10632, tid=10633
# assert((*(intptr_t*) (addr + slot)) == ((intptr_t) badHeapWordVal)) failed: Found non badHeapWordValue in pre-allocation check
Stack: [0x00007fafb7439000,0x00007fafb753a000], sp=0x00007fafb7537a10, free space=1018k
Native frames: (J=compiled Java code, A=aot compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [libjvm.so+0x137be61] VMError::report_and_die(int, char const*, char const*, __va_list_tag*, Thread*, unsigned char*, void*, void*, char const*, int, unsigned long)+0x49f
V [libjvm.so+0x137b912] VMError::report_and_die(Thread*, char const*, int, char const*, char const*, __va_list_tag*)+0x7e
V [libjvm.so+0x9c2dd6] report_vm_error(char const*, int, char const*, char const*, ...)+0x105
V [libjvm.so+0x8f1dc1] CollectedHeap::check_for_non_bad_heap_word_value(HeapWord*, unsigned long)+0xab
V [libjvm.so+0x606cf6] CollectedHeap::common_mem_allocate_noinit(KlassHandle, unsigned long, Thread*)+0x160
V [libjvm.so+0x606eac] CollectedHeap::common_mem_allocate_init(KlassHandle, unsigned long, Thread*)+0x4e
V [libjvm.so+0x6071f2] CollectedHeap::array_allocate(KlassHandle, int, int, Thread*)+0xf4
V [libjvm.so+0x132ff8c] TypeArrayKlass::allocate_common(int, bool, Thread*)+0x114
V [libjvm.so+0x5dcf8e] TypeArrayKlass::allocate(int, Thread*)+0x3e
V [libjvm.so+0x10edd93] oopFactory::new_typeArray(BasicType, int, Thread*)+0x55
V [libjvm.so+0xc9b520] InterpreterRuntime::newarray(JavaThread*, BasicType, int)+0x126
- backported by
-
JDK-8311481 Remove -XX:+CheckMemoryInitialization
-
- Resolved
-
- relates to
-
JDK-8311249 Remove unused MemAllocator::obj_memory_range
-
- Resolved
-
- links to
-
Commit
openjdk/jdk17u-dev/cf868a55
-
Commit
openjdk/jdk/65c8dbe6
-
Review
openjdk/jdk17u-dev/1534
-
Review
openjdk/jdk/14101
(1 links to)