8171221: Remove -XX:+CheckMemoryInitialization

Backport-of: 65c8dbe693f09203f66cd25aa9179982ddc38274